Fix collapsed player control alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -305,7 +305,7 @@ img {
     width: 96px !important;
   }
 
-  .aplayer.aplayer-fixed.aplayer-narrow .aplayer-body {
+  html .aplayer.aplayer-fixed.aplayer-narrow .aplayer-body {
     width: 78px !important;
   }
 
